--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="1.1844162012747534 1.1844162012747534 1.1844162012747534"
+                    scale="10 10 10"
                     gps-entity-place="latitude: 35.87904875157047; longitude: -231.37132767587903;"
                 ></a-entity>
 
