--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     gps-entity-place="latitude: 35.87130648513719; longitude: 128.62512200139466;"
                 ></a-entity>
 
-            <a-camera gps-camera="maxDistance: 1000000;" rotation-reader></a-camera>
+            <a-camera gps-camera="maxDistance: 1;" rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
