--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="10 10 10"                    
+                    scale="5 5 5"                    
                     gps-entity-place="latitude: 35.87130648513719; longitude: 128.62512200139466;"
                 ></a-entity>
 
-            <a-camera gps-projected-camera near='0.1' far='100' rotation-reader></a-camera>
+            <!-- <a-camera gps-projected-camera near='0.1' far='100' rotation-reader></a-camera> -->
+            <a-camera gps-camera near='0.1' far='100' rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
